--- a/Views/Estoque/Modal/DeleteAllPeca.cshtml
+++ b/Views/Estoque/Modal/DeleteAllPeca.cshtml
@@ -8,10 +8,10 @@
 
  <div id="modalDeleteAllPeca" class="modal" tabindex="-1">
     <div class="modal-dialog">
-        <div class="modal-content border-light" style="background-color:#212529;color:white;">
+        <div class="modal-content border-light">
             <form method="post" asp-action="DeleteAllPeca">
                 <input asp-for="Id" type="hidden">
-                <div class="modal-body" style="font-weight:570">
+                <div class="modal-body">
                     <p>Tem certeza que deseja excluir todos os itens?</p>
                 </div>
                 <div class="modal-footer">
