--- a/Views/Registro/Modal/DeletarRegistro.cshtml
+++ b/Views/Registro/Modal/DeletarRegistro.cshtml
@@ -6,9 +6,9 @@
 
 <div id="modalDeletarRegistro" class="modal" tabindex="-1">
     <div class="modal-dialog">
-        <div class="modal-content border-light" style="background-color:#212529;color:white;">
+        <div class="modal-content border-light">
             <form method="post" asp-action="DeletarRegistro">
-                <div class="modal-body" style="font-weight:570">
+                <div class="modal-body">
                     <p>Tem certeza que deseja excluir?</p>
                     <input asp-for="Id" type="hidden">
                 </div>
