--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Layout"] - TOLEAGRI</title>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="/_framework/aspnetcore-browser-refresh.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
@@ -42,7 +42,6 @@
     <script src="~/js/RegistroScript.js" asp-append-version="true"></script>
     <script src="~/js/EstoqueScript.js" asp-append-version="true"></script>
     <script src="~/js/ManagerScript.js" asp-append-version="true"></script>
-    <script src="/_framework/aspnetcore-browser-refresh.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
