--- a/Views/Registro/RegistroIndex.cshtml
+++ b/Views/Registro/RegistroIndex.cshtml
@@ -40,7 +40,7 @@
                 <th onclick="sortTableRegistros(4)">Quantidade</th>
                 <th onclick="sortTableRegistros(5)">NF ou Pedido</th>
                 <th onclick="sortTableRegistros(6)">Observação</th>
-                <th onclick="sortTableRegistros(7)">Usuário</th>
+                <th onclick="sortTableRegistros(7)">Responsável</th>
                 <th onclick="sortTableRegistros(8)">Data</th>
                 <th onclick="sortTableRegistros(9)">Entrada/Saída</th>
                 @if (isAdmin)
