--- a/Views/Estoque/Modal/DeletarPeca.cshtml
+++ b/Views/Estoque/Modal/DeletarPeca.cshtml
@@ -6,7 +6,7 @@
 
 <div id="modalDeletarPeca" class="modal" tabindex="-1">
     <div class="modal-dialog">
-        <div class="modal-content border-light">
+        <div class="modal-content" style="background-color:rgb(67 76 102);color:white">
             <form method="post" asp-action="DeletarPeca">
                 <div class="modal-body">
                     <p>Tem certeza que deseja excluir?</p>
