--- a/Views/Registro/RegistroIndex.cshtml
+++ b/Views/Registro/RegistroIndex.cshtml
@@ -4,7 +4,7 @@
 @model IEnumerable<TOLEAGRI.Model.Domain.RegistroPeca>
 @{
     ViewData["Title"] = "RegistroIndex";
-    var RegistrosOrdenados = Model.OrderBy(c => c.CodigoSistema).ToList();
+    var RegistrosOrdenados = Model.OrderByDescending(r => r.Data.Date).ToList();
 }
 
 @{
@@ -22,8 +22,8 @@
             </div>
             <div style="display:flex">
                 <input type="text" id="searchBarRegistro" style="height:40px;width:265px;margin-right:5px" class="form-control btn-dark border-light search" placeholder="Buscar" onkeydown="EnterRegistro(event)">
-                <input type="date" id="start-date" style="height:40px;width:150px;margin-right:5px" class="form-control btn-dark border-light search" placeholder="Data Inicial">
-                <input type="date" id="end-date" style="height:40px;width:150px" class="form-control btn-dark border-light search" placeholder="Data Final">
+                <input type="date" id="start-date" style="height:40px;width:150px;margin-right:5px" class="form-control btn-dark border-light search" placeholder="Data Inicial" onkeydown="EnterRegistro(event)">
+                <input type="date" id="end-date" style="height:40px;width:150px" class="form-control btn-dark border-light search" placeholder="Data Final" onkeydown="EnterRegistro(event)">
                 <a id="searchIconRegistros" onclick="searchIconRegistros()" style="cursor: pointer;">
                     <img src="~/Images/Pesquisa.png" style="width:25px;margin-top:5px;margin-left:5px" />
                 </a>
@@ -57,8 +57,12 @@
             @foreach (var item in RegistrosOrdenados)
             {
                 <tr class="registro-row">
-                    <td>@item.CodigoSistema</td>
-                    <td>@item.Locacao</td>
+                    <td class="@(item.CodigoSistema == item.CodigoSistema ? "text-danger" : "")">
+                        @item.CodigoSistema
+                    </td>
+                    <td class="@(item.Locacao == item.Locacao ? "text-warning" : "")">
+                        @item.Locacao
+                    </td>
                     <td>@item.Marca</td>
                     <td>@item.Modelo</td>
                     <td>@item.Quantidade</td>
@@ -66,7 +70,9 @@
                     <td>@item.Observacao</td>
                     <td>@item.Usuario</td>
                     <td>@item.Data.ToShortDateString()</td>
-                    <td>@item.EntradaOuSaida</td>
+                    <td class="@(item.EntradaOuSaida == "Entrada" ? "text-success" : item.EntradaOuSaida == "Saída" ? "text-primary" : "")">
+                        @item.EntradaOuSaida
+                    </td>
                     @if (isAdmin)
                     {
                         <td style="width:1px">
