--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,37 +12,91 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
     @* <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> *@
-
 </head>
+
 <body class="layout">
-    
-    <header >
+    <nav class="nav">
         <div class="logo">
             <a asp-area="" asp-controller="Estoque" asp-action="EstoqueIndex">
-                <img class="lazyload" src="~/Images/logo3.png" alt="Logo" style="width:200px" />
+                <img class="lazyload Logoimg" src="~/Images/logo3.png" alt="Logo" />
             </a>
         </div>
 
-    </header>
+        <div class="barra_tarefas">
+            <a class="btn btn-dark border-light modalEnt" onClick="ModalEntradaEstoque()">
+                <img src="~/Images/entrada.png" class="Entlogo" />
+                Entrada
+            </a>
+            <a class="btn btn-dark border-light ml-1" data-ajax="true" onClick="ModalSaidaEstoque()">
+                <img src="~/Images/saida.png " class="Sailogo" />
+                Saída
+            </a>
+            @* <a class="btn btn-dark border-light" type="button" asp-controller="Registro" asp-action="RegistroIndex">
+                <img src="/Images/abrirRegistro.png" alt="Relogio" class="Reglogo" />
+                Registros
+            </a> *@
+
+            <div class="dropdown">
+                <button class="btn btn-dark border-light dropdown-toggle ml-1" type="button" id="mainDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <img src="/Images/Relatorio.png" alt="Relatorio" class="Rellogo" />
+                    Relatórios
+                </button>
+                <div class="dropdown-menu" aria-labelledby="mainDropdown">
+                    <div class="dropdown-submenu">
+                        <a class="dropdown-item dropdown-toggle" href="#">Relatório em PDF</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#" onclick="generateReportPDF('data')">Relatório por Data</a>
+                            <a class="dropdown-item" href="#" onclick="generateReportPDF('status')">Relatório por Status</a>
+                            <a class="dropdown-item" href="#" onclick="generateReportPDF('contrato')">Relatório por Contratos</a>
+                            <a class="dropdown-item" href="#" onclick="generateReportPDF('urgencia')">Relatório por Urgência</a>
+                        </div>
+                    </div>
+                    <div class="dropdown-submenu">
+                        <a class="dropdown-item dropdown-toggle" href="#">Relatório em Excel</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#" onclick="generateReportExcel('data')">Relatório por Data</a>
+                            <a class="dropdown-item" href="#" onclick="generateReportExcel('status')">Relatório por Status</a>
+                            <a class="dropdown-item" href="#" onclick="generateReportExcel('contrato')">Relatório por Contratos</a>
+                            <a class="dropdown-item" href="#" onclick="generateReportExcel('urgencia')">Relatório por Urgência</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="search_bar ml-4">
+            <input type="text" id="searchBarPeca" class="form-control btn-dark border-light search bar" placeholder="Buscar" onkeydown="EnterPeca(event)">
+            <input type="date" id="start-date"  class="form-control btn-dark border-light search start_date" onkeydown="EnterPeca(event)">
+            <input type="date" id="end-date"  class="form-control btn-dark border-light search end_date" onkeydown="EnterPeca(event)">
+            <a id="searchIconPecas"  onclick="searchIconPecas()">
+                <img src="~/Images/Pesquisa.png" class="icon" />
+            </a>
+        </div>
+
+        
+    </nav>
+
+
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
         <div id="modalTOLEAGRI"></div>
     </div>
-
-    @* <footer class="footer text-muted text-center">
+</body>
+@* <footer class="footer text-muted text-center">
         <div class="card-footer">
                 Toleagri
         </div>
     </footer> *@
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/RegistroScript.js" asp-append-version="true"></script>
-    <script src="~/js/EstoqueScript.js" asp-append-version="true"></script>
-    <script src="~/js/ManagerScript.js" asp-append-version="true"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/RegistroScript.js" asp-append-version="true"></script>
+<script src="~/js/EstoqueScript.js" asp-append-version="true"></script>
+<script src="~/js/ManagerScript.js" asp-append-version="true"></script>
 
-    @await RenderSectionAsync("Scripts", required: false)
-</body>
+@await RenderSectionAsync("Scripts", required: false)
 </html>
