Ajustei os modais de entrada e saida para somar e subtrair a quantidade das peças no estoque.
Ajustei um pouco do layout.

Comecei a mexer nos relatórios.

--- a/Views/Estoque/EstoqueIndex.cshtml
+++ b/Views/Estoque/EstoqueIndex.cshtml
@@ -11,8 +11,16 @@
 }
 
 
+
 <div id="container" class="container">
-        
+    <div>
+        <a class="btn btn-dark border-light Regbtn" type="button" asp-controller="Registro" asp-action="RegistroIndex">
+        <img src="/Images/abrirRegistro.png" alt="Relogio" class="Reglogo" />
+        Registros
+    </a>
+
+
+    </div>
     <table class="table table-hover table-bordered table-dark">
         <thead >
             <tr >
