--- a/Views/Estoque/Modal/DeleteAllPeca.cshtml
+++ b/Views/Estoque/Modal/DeleteAllPeca.cshtml
@@ -8,7 +8,7 @@
 
  <div id="modalDeleteAllPeca" class="modal" tabindex="-1">
     <div class="modal-dialog">
-        <div class="modal-content" style="background-color:rgb(67 76 102);color:white">
+        <div class="modal-content" style="background-color:rgb(245,245,245);">
             <form method="post" asp-action="DeleteAllPeca">
                 <input asp-for="Id" type="hidden">
                 <div class="modal-body">
