--- a/Views/Estoque/Modal/SaidaEstoque.cshtml
+++ b/Views/Estoque/Modal/SaidaEstoque.cshtml
@@ -6,11 +6,12 @@
 
 <div id="modalSaidaEstoque" class="modal" tabindex="-1" style="display:block">
     <div class="modal-dialog">
-        <div class="modal-content" style="background-color:rgb(67 76 102);color:white">
+        <div class="modal-content" style="background-color:rgb(245,245,245);">
 
             <form id="formSaidaEstoque" method="post" asp-action="SaidaEstoque">
                 <div class="modal-header" style="height:50px">
                     <h5 class="modal-title">Saida de Estoque</h5>
+                    <button type="button" class="btn btn-secondary" id="clearFormButton">Limpar</button>
                 </div>
                 <div class="text-danger">
                     @Html.ValidationSummary(false)
@@ -25,7 +26,7 @@
 
 
                         <label asp-for="CodigoSistema"> **Código da Peça** </label>
-                        <input required asp-for="CodigoSistema" type="text" class="form-control" id="CodigoSistema">
+                        <input required asp-for="CodigoSistema" type="text" class="form-control" name="CodigoSistema" id="CodigoSistema">
 
                             <div class="input-group mt-3">
                             <label class="mr-2" asp-for="Locacao">**Locação**</label>
@@ -49,8 +50,8 @@
                             <input asp-for="Modelo" type="text" class="form-control" id="Modelo">
                         </div>
 
-                        <label class="mt-1" asp-for="Observacao">**Observação**</label>
-                        <input required asp-for="Observacao" type="text" class="form-control" id="Observacao">
+                        <label class="mt-1" asp-for="Observacao">Observação</label>
+                        <input asp-for="Observacao" type="text" class="form-control" id="Observacao">
 
                     </div>
 
@@ -60,6 +61,7 @@
                     <button type="button" class="btn btn-dark border-light" data-bs-dismiss="modal">Cancelar</button>
                 </div>
             </form>
+            }
         </div>
     </div>
 </div>
