--- a/Views/Registro/Modal/DeletarRegistro.cshtml
+++ b/Views/Registro/Modal/DeletarRegistro.cshtml
@@ -6,7 +6,7 @@
 
 <div id="modalDeletarRegistro" class="modal" tabindex="-1">
     <div class="modal-dialog">
-        <div class="modal-content" style="background-color:rgb(67 76 102);color:white">
+        <div class="modal-content" style="background-color:rgb(245,245,245);">
             <form method="post" asp-action="DeletarRegistro">
                 <div class="modal-body">
                     <p>Tem certeza que deseja excluir?</p>
